--- a/src/sass/layout/_clients.scss
+++ b/src/sass/layout/_clients.scss
@@ -1,3 +1,44 @@
+.home__link {
+  // @extend %link;
+
+  position: fixed;
+  bottom: 20px;
+  right: 40px;
+  width: 40px;
+  height: 40px;
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: $orange;
+  background-color: transparent;
+  border: 2px solid $orange;
+  opacity: 0.5;
+
+  transition: color 250ms $time-function, background-color 250ms $time-function,
+    opacity 250ms $time-function;
+
+  &:hover {
+    opacity: 1;
+    background-color: $orange;
+    color: $white;
+  }
+}
+
+.home__icon {
+  fill: currentColor;
+}
+
+// .reviews {
+//   padding-top: 50px;
+//   padding-bottom: 50px;
+
+//   @media screen and (min-width: $desktop) {
+//     padding-top: 130px;
+//     padding-bottom: 130px;
+//   }
+// }
+
 .clients {
   display: block;
 }
@@ -14,232 +55,298 @@
 
   color: #111518;
 }
-.clients__top-part {
-  box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
-}
-.clients__right-side {
-  padding-left: 10px;
-  padding-right: 10px;
-}
-.clients__img {
-  display: block;
-  width: 90px;
-  margin-right: auto;
-  margin-left: auto;
-}
-.clients__icon {
-  display: block;
-  margin-bottom: 20px;
-  margin-top: 20px;
-  margin-right: auto;
-  margin-left: auto;
-}
-.clients__name-title {
-  margin-bottom: 10px;
 
-  font-family: Montserrat;
-  font-style: normal;
+// .reviews__title {
+//   margin-bottom: 20px;
+//   margin-top: 0;
+//   font-weight: 800;
+//   font-size: 20px;
+//   line-height: 1.3;
+//   text-align: center;
+//   letter-spacing: 0.03em;
+
+//   color: $dark-background-color;
+
+//   @media screen and (min-width: $tablet) {
+//     margin-bottom: 30px;
+//     font-size: 26px;
+//   }
+
+//   @media screen and (min-width: $desktop) {
+//     margin-bottom: 50px;
+//     font-size: 46px;
+//   }
+// }
+
+.slider__container {
+  @media screen and (min-width: 1344px) {
+    margin-left: auto;
+    margin-right: auto;
+    width: 1090px;
+  }
+}
+
+.review {
+  padding: 20px 20px 30px 20px;
+
+  @media screen and (min-width: 767px) {
+    display: flex;
+    padding: 40px;
+
+    & > .review__wrapper:first-child {
+      margin-right: 46px;
+    }
+  }
+
+  @media screen and (min-width: 1344px) {
+    padding: 50px 110px 50px 80px;
+  }
+}
+
+.reviews__thumb {
+  overflow: hidden;
+  border-radius: 50%;
+  margin-right: auto;
+  margin-left: auto;
+
+  &--slide-for {
+    width: 90px;
+    height: 90px;
+    margin-bottom: 20px;
+
+    @media screen and (min-width: 767px) {
+      width: 150px;
+      height: 150px;
+    }
+  }
+
+  &--slide-nav {
+    width: 54px;
+    height: 54px;
+  }
+}
+
+.reviews__img {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
+
+.review__social-link {
+  //@extend link;
+  cursor: pointer;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+  width: 30px;
+  height: 30px;
+}
+
+.review__title {
+  margin-bottom: 10px;
+  margin-top: 0;
   font-weight: 800;
   font-size: 14px;
-  line-height: 17px;
-  text-align: center;
+  line-height: 1.2;
   letter-spacing: 0.08em;
-  color: #ff6b09;
+  text-align: center;
+  color: $orange;
+
+  @media screen and (min-width: 767px) {
+    margin-bottom: 20px;
+    font-size: 20px;
+    text-align: left;
+  }
+
+  @media screen and (min-width: 1344px) {
+    margin-bottom: 10px;
+    font-size: 30px;
+  }
 }
-.clients__description {
+
+.review__university {
   margin-bottom: 10px;
-  font-family: Montserrat;
-  font-style: normal;
+  margin-top: 0;
   font-weight: 500;
   font-size: 12px;
   line-height: 1.25;
-  text-align: center;
   letter-spacing: 0.08em;
+  text-align: center;
+  color: $grey;
 
-  color: #b9b9b9;
+  @media screen and (min-width: 767px) {
+    text-align: left;
+  }
+
+  @media screen and (min-width: 1344px) {
+    font-size: 14px;
+  }
 }
-.clients__second-description {
-  padding-bottom: 30px;
-  font-family: Montserrat;
-  font-style: normal;
+
+.review__text {
+  margin-top: 0;
+  margin-bottom: 0;
   font-weight: 500;
   font-size: 12px;
-  line-height: 1.667;
+  line-height: 1.7;
+  letter-spacing: 0;
   text-align: center;
-  color: #3d3d3d;
-}
-.clients__text-box {
-  text-decoration-line: underline;
-  color: #ff6b09;
-}
-.clients__list-box {
-  width: 280px;
-  height: 54px;
-}
-.clients__list {
-  display: flex;
-  align-items: center;
-}
+  color: $slider-text-color;
 
-.clients__item:not(:last-child) {
-  margin-right: 10px;
+  @media screen and (min-width: 767px) {
+    text-align: left;
+  }
+
+  @media screen and (min-width: 1344px) {
+    font-size: 18px;
+  }
 }
-.clients__item-none {
+// слайдер
+.js .slider-single > div:nth-child(1n + 2) {
   display: none;
 }
-.clients__icon-left-line {
+
+.js .slider-single.slick-initialized > div:nth-child(1n + 2) {
+  display: block;
+}
+
+.slider-nav .slick-slide {
+  cursor: pointer;
+}
+
+.slick-slide.is-active .reviews__thumb {
+  border: 2px solid $orange;
+}
+
+.slider-single {
+  margin-bottom: 20px;
+  box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+}
+
+.slider-nav {
+  margin-right: 50px;
+  margin-left: 50px;
+
+  @media screen and (min-width: 767px) {
+    margin-right: 60px;
+    margin-left: 60px;
+  }
+  @media screen and (min-width: 1344px) {
+    margin-right: 260px;
+    margin-left: 260px;
+  }
+}
+
+.slick-next {
+  right: 0;
+  bottom: -59px;
+  top: auto;
+  width: 25px;
+  height: 15px;
+
+  &::before {
+    content: '';
+    display: block;
+    width: 25px;
+    height: 15px;
+    background-image: url('../images/arrow-right.svg');
+    background-size: cover;
+    background-position: center;
+  }
+
+  @media screen and (min-width: 767px) {
+    right: -13px;
+    bottom: auto;
+    top: 50%;
+  }
+
+  @media screen and (min-width: 1344px) {
+    right: -85px;
+  }
+}
+
+.slick-prev {
+  left: 0;
+  bottom: -59px;
+  top: auto;
+  width: 25px;
+  height: 15px;
+
+  &::before {
+    content: '';
+    display: block;
+    width: 25px;
+    height: 15px;
+    background-image: url('../images/arrow-left.svg');
+    background-size: cover;
+    background-position: center;
+  }
+
+  @media screen and (min-width: 767px) {
+    left: -13px;
+    bottom: auto;
+    top: 50%;
+  }
+
+  @media screen and (min-width: 1344px) {
+    left: -85px;
+  }
+}
+// Читать дальше
+.review__checkbox {
+  display: none;
+}
+
+.review__text--hidden {
+  opacity: 0;
+  max-height: 0;
+  transform: scale(0.5);
+  font-size: 0;
+  transition: 250ms $time-function;
+}
+
+.review__checkbox:checked {
+  & ~ .review__text .review__text--hidden {
+    opacity: 1;
+    font-size: inherit;
+    max-height: 999em;
+  }
+}
+
+.review__label::before {
+  content: 'Читать дальше';
+  text-decoration: underline;
+  color: $orange;
+}
+
+.review__text--visible::after {
+  content: '...';
+}
+
+.review__checkbox:checked {
+  & ~ .review__text .review__label::before {
+    content: '';
+  }
+
+  & + .review__text .review__text--visible::after {
+    content: '';
+    margin-left: -3px;
+  }
+}
+
+.review__label {
+  cursor: pointer;
   display: flex;
-  align-items: center;
-  height: 54px;
-}
-.clients__icon-right-line {
-  display: flex;
-  align-items: center;
-  height: 54px;
-}
-.clients__bottom-part {
-  margin-top: 20px;
-  display: flex;
-  justify-content: space-between;
-}
+  justify-content: center;
+  font-size: 12px;
+  line-height: 1.7;
 
-@media screen and (min-width: 768px) {
-  .clients__icon-right-line {
-    display: none;
-  }
-  .clients__icon-left-line {
-    display: none;
-  }
-  .clients__title {
-    margin-bottom: 70px;
-  }
-  .clients__name-title {
-    text-align: left;
-    margin-bottom: 20px;
-  }
-  .clients__img {
-    display: flex;
-    width: 150px;
-  }
-  .clients__box {
-    display: flex;
-  }
-  .clients__top {
-    position: relative;
-    display: flex;
-    align-items: center;
-  }
-  .clients__icon {
-    margin-top: 20px;
-  }
-  .clients__left-side {
-    margin-right: 46px;
-  }
-  .clients__right-side {
-    width: 412px;
-    padding-left: 0;
-    padding-right: 0;
+  @media screen and (min-width: 767px) {
+    display: inline;
   }
 
-  .clients__description {
-    text-align: left;
-    margin-bottom: 20px;
-  }
-  .clients__second-description {
-    width: 412px;
-    text-align: left;
-    margin-right: 40px;
-    padding-bottom: 0;
-  }
-  .clients__top-part {
-    display: flex;
-    padding: 40px;
-    width: 688px;
-  }
-  .clients__item-none {
-    display: flex;
-  }
-  .clients__bottom-part {
-    justify-content: space-around;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 30px;
-  }
-  .clients__item:not(:last-child) {
-    margin-right: 30px;
-  }
-  .clients__icon-other-left-line {
-    position: absolute;
-    left: -15px;
-  }
-  .clients__icon-other-right-line {
-    position: absolute;
-    right: -15px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .clients__icon-other-left-line,
-  .clients__icon-other-right-line {
-    display: none;
-  }
-}
-@media screen and (min-width: 1344px) {
-  .clients__title {
-    font-size: 46px;
-    margin-bottom: 91px;
-  }
-
-  .clients__name-title {
-    font-size: 30px;
-    line-height: 1.233;
-  }
-  .clients__top-part {
-    width: 1090px;
-    padding-top: 8px;
-    padding-right: 97px;
-    padding-bottom: 93px;
-    padding-left: 97px;
-  }
-  .clients__top {
-    justify-content: space-between;
-  }
-
-  .clients__second-description {
-    text-align: left;
-    width: 706px;
-    padding-bottom: 0;
+  @media screen and (min-width: 1344px) {
     font-size: 18px;
-    line-height: 1.556;
-  }
-  .clients__left-side {
-    margin-right: 40px;
-  }
-  .clients__name-title {
-    text-align: left;
-  }
-  .clients__description {
-    width: 438px;
-    margin-bottom: 20px;
-    font-size: 12px;
-    line-height: 1.25;
-  }
-
-  .clients__top {
-    justify-content: center;
-  }
-  .clients__right-side {
-    width: 706px;
-  }
-  .clients__bottom-part {
-    margin-top: 40px;
-  }
-
-  .clients__icon-other-left-line {
-    position: absolute;
-    left: 30px;
-  }
-  .clients__icon-other-right-line {
-    position: absolute;
-    right: 30px;
   }
 }
