--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -6,3 +6,4 @@ $width-mobile: 320px;
 $width-tablet: 768px;
 $width-desktop: 1344px;
 $time-function: cubic-bezier(0.4, 0, 0.2, 1);
+$slider-text-color: #3d3d3d;
